@@ -6,10 +6,10 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import uk.gov.hmcts.reform.ccd.client.model.CaseEventDetail;
 import uk.gov.hmcts.reform.civil.callback.CaseEvent;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.CaseDocument;
 import uk.gov.hmcts.reform.civil.documentmanagement.model.DocumentType;
-import uk.gov.hmcts.reform.civil.enums.dq.Language;
 import uk.gov.hmcts.reform.civil.enums.BusinessProcessStatus;
 import uk.gov.hmcts.reform.civil.enums.CaseState;
 import uk.gov.hmcts.reform.civil.enums.DJPaymentTypeSelection;
@@ -18,23 +18,22 @@ import uk.gov.hmcts.reform.civil.enums.RespondentResponsePartAdmissionPaymentTim
 import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpec;
 import uk.gov.hmcts.reform.civil.enums.RespondentResponseTypeSpecPaidStatus;
 import uk.gov.hmcts.reform.civil.enums.YesOrNo;
-import uk.gov.hmcts.reform.civil.model.CCJPaymentDetails;
-import uk.gov.hmcts.reform.civil.model.citizenui.dto.ClaimantResponseOnCourtDecisionType;
+import uk.gov.hmcts.reform.civil.enums.dq.Language;
 import uk.gov.hmcts.reform.civil.model.BusinessProcess;
+import uk.gov.hmcts.reform.civil.model.CCJPaymentDetails;
 import uk.gov.hmcts.reform.civil.model.CaseData;
-import uk.gov.hmcts.reform.civil.model.Party;
 import uk.gov.hmcts.reform.civil.model.Mediation;
 import uk.gov.hmcts.reform.civil.model.MediationAgreementDocument;
 import uk.gov.hmcts.reform.civil.model.MediationSuccessful;
+import uk.gov.hmcts.reform.civil.model.Party;
 import uk.gov.hmcts.reform.civil.model.PaymentUponCourtOrder;
+import uk.gov.hmcts.reform.civil.model.citizenui.dto.ClaimantResponseOnCourtDecisionType;
 import uk.gov.hmcts.reform.civil.model.common.Element;
 import uk.gov.hmcts.reform.civil.model.dq.Applicant1DQ;
 import uk.gov.hmcts.reform.civil.model.dq.RequestedCourt;
 import uk.gov.hmcts.reform.civil.model.judgmentonline.JudgmentDetails;
 import uk.gov.hmcts.reform.civil.model.judgmentonline.JudgmentState;
 import uk.gov.hmcts.reform.civil.model.judgmentonline.JudgmentType;
-import uk.gov.hmcts.reform.civil.model.sdo.FastTrackHearingTime;
-import uk.gov.hmcts.reform.civil.model.sdo.SmallClaimsHearing;
 import uk.gov.hmcts.reform.civil.service.FeatureToggleService;
 
 import java.time.LocalDate;
@@ -44,9 +43,7 @@ import java.util.List;
 import java.util.UUID;
 
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
-import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.when;
-import static uk.gov.hmcts.reform.civil.callback.CaseEvent.FEE_PAYMENT_OUTCOME;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.INVALID_HWF_REFERENCE;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.NO_REMISSION_HWF;
 import static uk.gov.hmcts.reform.civil.callback.CaseEvent.PARTIAL_REMISSION_HWF_GRANTED;
@@ -74,7 +71,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.NO_RESPONSE);
     }
 
@@ -86,7 +83,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIM_SUBMIT_HWF);
     }
 
@@ -98,7 +95,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.ELIGIBLE_FOR_CCJ);
     }
 
@@ -109,7 +106,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.ELIGIBLE_FOR_CCJ);
     }
 
@@ -122,7 +119,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFAULT_JUDGEMENT);
     }
 
@@ -133,7 +130,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.RESPONSE_DUE_NOW);
     }
 
@@ -146,7 +143,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.MORE_TIME_REQUESTED);
     }
 
@@ -155,7 +152,7 @@ class CcdClaimStatusDashboardFactoryTest {
         CaseData claim = getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec.IMMEDIATELY);
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.ADMIT_PAY_IMMEDIATELY);
     }
 
@@ -164,7 +161,7 @@ class CcdClaimStatusDashboardFactoryTest {
         CaseData claim = getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec.BY_SET_DATE);
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.ADMIT_PAY_BY_SET_DATE);
     }
 
@@ -173,7 +170,7 @@ class CcdClaimStatusDashboardFactoryTest {
         CaseData claim = getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec.SUGGESTION_OF_REPAYMENT_PLAN);
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.ADMIT_PAY_INSTALLMENTS);
     }
 
@@ -187,7 +184,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_ACCEPTED_STATES_PAID);
     }
 
@@ -198,7 +195,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.SETTLED);
     }
 
@@ -209,7 +206,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.SETTLED);
     }
 
@@ -222,7 +219,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.REQUESTED_COUNTRY_COURT_JUDGEMENT);
     }
 
@@ -234,7 +231,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.REQUESTED_COUNTRY_COURT_JUDGEMENT);
     }
 
@@ -248,7 +245,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .applicant1AcceptPartAdmitPaymentPlanSpec(YesOrNo.YES)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_ACCEPTED_ADMISSION_OF_AMOUNT);
     }
 
@@ -260,7 +257,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .respondent1ClaimResponseTypeForSpec(RespondentResponseTypeSpec.PART_ADMISSION)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFENDANT_PART_ADMIT);
     }
 
@@ -268,55 +265,36 @@ class CcdClaimStatusDashboardFactoryTest {
     void given_hearingNoticeDocumentIssued_whenGetStatus_thenReturnHearingFormGenerated() {
         CaseData claim = CaseData.builder()
             .respondent1ResponseDate(LocalDateTime.now())
+            .hearingDate(LocalDate.now().plusDays(6 * 7 + 1))
+            .ccdState(CaseState.HEARING_READINESS)
             .hearingDocuments(List.of(Element.<CaseDocument>builder().value(CaseDocument.builder()
                                                                                 .documentName("testDoc")
                                                                                 .build()).build()))
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.singletonList(CaseEventDetail.builder()
+                                                                       .id(CaseEvent.HEARING_SCHEDULED.name())
+                                                                       .createdDate(LocalDateTime.now())
+                                                                       .build())));
         assertThat(status).isEqualTo(DashboardClaimStatus.HEARING_FORM_GENERATED);
     }
 
     @Test
-    void given_hearingDateForSmallClaimIsAfterToday_and_SDOBeenDrawn_whenGetStatus_moreDetailsRequired() {
-        Element<CaseDocument> document = new Element<>(
-            UUID.fromString("5fc03087-d265-11e7-b8c6-83e29cd24f4c"),
-            CaseDocument.builder()
-                .documentType(DocumentType.SDO_ORDER)
-                .build()
-        );
+    void given_hearingNoticeDocumentIssuedAndRelisted_whenGetStatus_thenReturnHearingFormGeneratedRelisting() {
         CaseData claim = CaseData.builder()
-            .smallClaimsHearing(SmallClaimsHearing.builder()
-                                    .dateFrom(LocalDate.now().plusDays(10))
-                                    .build())
             .respondent1ResponseDate(LocalDateTime.now())
-            .systemGeneratedCaseDocuments(List.of(document))
+            .hearingDate(LocalDate.now().plusDays(6 * 7 + 1))
+            .ccdState(CaseState.PREPARE_FOR_HEARING_CONDUCT_HEARING)
+            .hearingDocuments(List.of(Element.<CaseDocument>builder().value(CaseDocument.builder()
+                                                                                .documentName("testDoc")
+                                                                                .build()).build()))
             .build();
-        given(featureToggleService.isCaseProgressionEnabled()).willReturn(true);
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
-        assertThat(status).isEqualTo(DashboardClaimStatus.MORE_DETAILS_REQUIRED);
-    }
-
-    @Test
-    void given_hearingDateForFastTrackClaimIsAfterToday_and_SDOBeenDrawn_whenGetStatus_moreDetailsRequired() {
-        Element<CaseDocument> document = new Element<>(
-            UUID.fromString("5fc03087-d265-11e7-b8c6-83e29cd24f4c"),
-            CaseDocument.builder()
-                .documentType(DocumentType.SDO_ORDER)
-                .build()
-        );
-        CaseData claim = CaseData.builder()
-            .fastTrackHearingTime(FastTrackHearingTime.builder()
-                                      .dateFrom(LocalDate.now().plusDays(10))
-                                      .build())
-            .respondent1ResponseDate(LocalDateTime.now())
-            .systemGeneratedCaseDocuments(List.of(document))
-            .build();
-        given(featureToggleService.isCaseProgressionEnabled()).willReturn(true);
-        DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
-        assertThat(status).isEqualTo(DashboardClaimStatus.MORE_DETAILS_REQUIRED);
+            claim, featureToggleService, Collections.singletonList(CaseEventDetail.builder()
+                                                                       .id(CaseEvent.HEARING_SCHEDULED.name())
+                                                                       .createdDate(LocalDateTime.now())
+                                                                       .build())));
+        assertThat(status).isEqualTo(DashboardClaimStatus.HEARING_FORM_GENERATED_RELISTING);
     }
 
     @Test
@@ -331,7 +309,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .respondent1ClaimResponseTypeForSpec(PART_ADMISSION)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.MEDIATION_SUCCESSFUL);
     }
 
@@ -346,7 +324,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .respondent1ClaimResponseTypeForSpec(PART_ADMISSION)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.MEDIATION_UNSUCCESSFUL);
     }
 
@@ -361,7 +339,7 @@ class CcdClaimStatusDashboardFactoryTest {
                            .build())
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.IN_MEDIATION);
     }
 
@@ -374,7 +352,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .applicant1ResponseDate(LocalDateTime.now())
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.WAITING_COURT_REVIEW);
     }
 
@@ -387,7 +365,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .applicant1ResponseDate(LocalDateTime.now())
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIM_ENDED);
     }
 
@@ -401,18 +379,17 @@ class CcdClaimStatusDashboardFactoryTest {
             .ccdState(CaseState.JUDICIAL_REFERRAL)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_REJECT_PARTIAL_ADMISSION);
     }
 
     private static CaseData getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec paymentMethod) {
-        CaseData claim = CaseData.builder()
+        return CaseData.builder()
             .respondent1ResponseDeadline(LocalDate.now().plusDays(10).atTime(16, 0, 0))
             .respondent1ResponseDate(LocalDateTime.now())
             .respondent1ClaimResponseTypeForSpec(RespondentResponseTypeSpec.FULL_ADMISSION)
             .defenceAdmitPartPaymentTimeRouteRequired(paymentMethod)
             .build();
-        return claim;
     }
 
     @Test
@@ -420,6 +397,7 @@ class CcdClaimStatusDashboardFactoryTest {
         Element<CaseDocument> document = new Element<>(
             UUID.fromString("5fc03087-d265-11e7-b8c6-83e29cd24f4c"),
             CaseDocument.builder()
+                .createdDatetime(LocalDateTime.now())
                 .documentType(DocumentType.SDO_ORDER)
                 .build()
         );
@@ -430,7 +408,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
         DashboardClaimStatus status =
             ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-                claim, featureToggleService));
+                claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.SDO_ORDER_CREATED);
     }
 
@@ -442,7 +420,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
         DashboardClaimStatus status =
             ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-                claim, featureToggleService));
+                claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIM_ENDED);
     }
 
@@ -455,7 +433,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .ccdState(CaseState.PROCEEDS_IN_HERITAGE_SYSTEM)
             .build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.WAITING_COURT_REVIEW);
     }
 
@@ -470,7 +448,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFENDANT_PART_ADMIT);
     }
@@ -486,8 +464,14 @@ class CcdClaimStatusDashboardFactoryTest {
                 FeeType.CLAIMISSUED)
             .build();
 
-        DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+        DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(
+            new CcdDashboardClaimantClaimMatcher(
+                caseData, featureToggleService, Collections.singletonList(
+                CaseEventDetail.builder()
+                    .createdDate(LocalDateTime.now())
+                    .id(NO_REMISSION_HWF.name())
+                    .build()
+            )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_NO_REMISSION);
     }
@@ -504,7 +488,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(NO_REMISSION_HWF.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_NO_REMISSION);
     }
@@ -521,7 +510,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(PARTIAL_REMISSION_HWF_GRANTED.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_PARTIAL_REMISSION);
     }
@@ -538,7 +532,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(PARTIAL_REMISSION_HWF_GRANTED.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_PARTIAL_REMISSION);
     }
@@ -555,7 +554,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(UPDATE_HELP_WITH_FEE_NUMBER.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_UPDATED_REF_NUMBER);
     }
@@ -572,7 +576,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(UPDATE_HELP_WITH_FEE_NUMBER.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_UPDATED_REF_NUMBER);
     }
@@ -589,7 +598,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(INVALID_HWF_REFERENCE.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_INVALID_REF_NUMBER);
     }
@@ -606,7 +620,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(INVALID_HWF_REFERENCE.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_INVALID_REF_NUMBER);
     }
@@ -614,7 +633,7 @@ class CcdClaimStatusDashboardFactoryTest {
     @Test
     void givenClaimStatusInHearingReadinessAndHWFFeePaymentOutcome_WhenGetStatus_thenReturnHearingFeePaidStatus() {
         HelpWithFeesDetails hwfDetails = HelpWithFeesDetails.builder()
-            .hwfCaseEvent(FEE_PAYMENT_OUTCOME).build();
+            .hwfCaseEvent(CaseEvent.FEE_PAYMENT_OUTCOME).build();
         CaseData caseData = CaseData.builder()
             .ccdState(CaseState.HEARING_READINESS)
             .hearingHwfDetails(hwfDetails)
@@ -623,7 +642,12 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            caseData, featureToggleService));
+            caseData, featureToggleService, Collections.singletonList(
+            CaseEventDetail.builder()
+                .createdDate(LocalDateTime.now())
+                .id(CaseEvent.FEE_PAYMENT_OUTCOME.name())
+                .build()
+        )));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_HWF_FEE_PAYMENT_OUTCOME);
     }
@@ -631,13 +655,13 @@ class CcdClaimStatusDashboardFactoryTest {
     @Test
     void givenBilingualLanguageIsWelsh_ClaimantIntentDocUploadPending_thenReturnDocUploadStatus() {
         CaseData caseData = CaseData.builder()
-                .ccdState(CaseState.AWAITING_APPLICANT_INTENTION)
-                .respondent1ClaimResponseTypeForSpec(RespondentResponseTypeSpec.FULL_DEFENCE)
-                .applicant1ResponseDate(LocalDateTime.now())
-                .claimantBilingualLanguagePreference(Language.BOTH.toString()).build();
+            .ccdState(CaseState.AWAITING_APPLICANT_INTENTION)
+            .respondent1ClaimResponseTypeForSpec(RespondentResponseTypeSpec.FULL_DEFENCE)
+            .applicant1ResponseDate(LocalDateTime.now())
+            .claimantBilingualLanguagePreference(Language.BOTH.toString()).build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-                caseData, featureToggleService));
+            caseData, featureToggleService, Collections.emptyList()));
 
         assertThat(status).isEqualTo(DashboardClaimStatus.WAITING_FOR_CLAIMANT_INTENT_DOC_UPLOAD);
     }
@@ -645,20 +669,21 @@ class CcdClaimStatusDashboardFactoryTest {
     @Test
     void given_claimantRejectsDefendantsPaymentPlan_RequestedJudgeDecision_WhenGetStatus_thenReturnAwaitingJudgeReview() {
         CaseData claim = CaseData.builder()
-                .respondent1ResponseDate(LocalDateTime.now())
-                .respondent1ClaimResponseTypeForSpec(PART_ADMISSION)
-                .defenceAdmitPartPaymentTimeRouteRequired(RespondentResponsePartAdmissionPaymentTimeLRspec.BY_SET_DATE)
-                .applicant1AcceptPartAdmitPaymentPlanSpec(YesOrNo.NO)
-                .caseDataLiP(CaseDataLiP.builder()
-                        .applicant1LiPResponse(ClaimantLiPResponse.builder()
-                                .claimantResponseOnCourtDecision(ClaimantResponseOnCourtDecisionType.JUDGE_REPAYMENT_DATE)
-                                .build())
-                        .build())
-                .respondent1(Party.builder()
-                        .type(Party.Type.INDIVIDUAL)
-                        .build()).build();
+            .respondent1ResponseDate(LocalDateTime.now())
+            .respondent1ClaimResponseTypeForSpec(PART_ADMISSION)
+            .defenceAdmitPartPaymentTimeRouteRequired(RespondentResponsePartAdmissionPaymentTimeLRspec.BY_SET_DATE)
+            .applicant1AcceptPartAdmitPaymentPlanSpec(YesOrNo.NO)
+            .caseDataLiP(CaseDataLiP.builder()
+                             .applicant1LiPResponse(ClaimantLiPResponse.builder()
+                                                        .claimantResponseOnCourtDecision(
+                                                            ClaimantResponseOnCourtDecisionType.JUDGE_REPAYMENT_DATE)
+                                                        .build())
+                             .build())
+            .respondent1(Party.builder()
+                             .type(Party.Type.INDIVIDUAL)
+                             .build()).build();
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-                claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CLAIMANT_REJECTED_PAYMENT_PLAN_REQ_JUDGE_DECISION);
     }
 
@@ -666,10 +691,10 @@ class CcdClaimStatusDashboardFactoryTest {
     void given_responseAdmitPayImmediately_whenGetStatus_thenReturnResponeByPost() {
         CaseData claim = getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec.IMMEDIATELY);
         CaseData updatedClaim = claim.toBuilder().takenOfflineDate(LocalDateTime.now())
-                .ccdState(CaseState.PROCEEDS_IN_HERITAGE_SYSTEM).previousCCDState(CaseState.AWAITING_APPLICANT_INTENTION).build();
+            .ccdState(CaseState.PROCEEDS_IN_HERITAGE_SYSTEM).previousCCDState(CaseState.AWAITING_APPLICANT_INTENTION).build();
         when(featureToggleService.isLipVLipEnabled()).thenReturn(true);
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
-                updatedClaim, featureToggleService));
+            updatedClaim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.RESPONSE_BY_POST);
     }
 
@@ -677,10 +702,14 @@ class CcdClaimStatusDashboardFactoryTest {
     void given_responseAdmitPayBySetDate_whenGetStatus_thenReturnResponeByPost() {
         CaseData claim = getClaimWithFullAdmitResponse(RespondentResponsePartAdmissionPaymentTimeLRspec.BY_SET_DATE);
         CaseData updatedClaim = claim.toBuilder().takenOfflineDate(LocalDateTime.now()).ccdState(CaseState.PROCEEDS_IN_HERITAGE_SYSTEM)
-                .previousCCDState(CaseState.AWAITING_RESPONDENT_ACKNOWLEDGEMENT).build();
+            .previousCCDState(CaseState.AWAITING_RESPONDENT_ACKNOWLEDGEMENT).build();
         when(featureToggleService.isLipVLipEnabled()).thenReturn(true);
         DashboardClaimStatus status =
-                ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(updatedClaim, featureToggleService));
+            ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
+                updatedClaim,
+                featureToggleService,
+                Collections.emptyList()
+            ));
         assertThat(status).isEqualTo(DashboardClaimStatus.RESPONSE_BY_POST);
     }
 
@@ -694,7 +723,11 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
         when(featureToggleService.isLipVLipEnabled()).thenReturn(true);
         DashboardClaimStatus status =
-            ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(claim, featureToggleService));
+            ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
+                claim,
+                featureToggleService,
+                Collections.emptyList()
+            ));
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFENDANT_APPLY_NOC);
     }
 
@@ -708,8 +741,11 @@ class CcdClaimStatusDashboardFactoryTest {
                     .value(CaseDocument.builder().documentType(DocumentType.DEFAULT_JUDGMENT)
                                .createdDatetime(LocalDateTime.now()).build()).build())).build();
         DashboardClaimStatus status =
-            ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(claim,
-                                                                                                         featureToggleService));
+            ccdClaimStatusDashboardFactory.getDashboardClaimStatus(
+                new CcdDashboardDefendantClaimMatcher(
+                    claim,
+                    featureToggleService, Collections.emptyList()
+                ));
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFAULT_JUDGEMENT_ISSUED);
     }
 
@@ -724,7 +760,7 @@ class CcdClaimStatusDashboardFactoryTest {
         DashboardClaimStatus status =
             ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardDefendantClaimMatcher(
                 claim,
-                featureToggleService
+                featureToggleService, Collections.emptyList()
             ));
         assertThat(status).isEqualTo(DashboardClaimStatus.DEFAULT_JUDGEMENT_ISSUED);
     }
@@ -736,7 +772,7 @@ class CcdClaimStatusDashboardFactoryTest {
             .build();
 
         DashboardClaimStatus status = ccdClaimStatusDashboardFactory.getDashboardClaimStatus(new CcdDashboardClaimantClaimMatcher(
-            claim, featureToggleService));
+            claim, featureToggleService, Collections.emptyList()));
         assertThat(status).isEqualTo(DashboardClaimStatus.CASE_DISMISSED);
     }
 }
